--- a/Robocol/testapp/src/app/app.component.html
+++ b/Robocol/testapp/src/app/app.component.html
@@ -1,85 +1,153 @@
-<div id="background">
+<div id="background" style="width: -webkit-fill-available;">
   <!-- <div class="container-fluid bg-dark text-white" id="page"> -->
-    <nav class="navbar navbar-dark navbar-expand-sm navbar-fixed-top" id="top-bar">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="home"><img style="height: 48px; padding: 2px 10px;" src="/static/assets/robocol-BLANCO.png"></a>
-      </div>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon">
-          <i class="fas fa-bars" style="color:#fff; font-size:28px;"></i>
-        </span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="nav navbar-nav">
-          <!-- Pestanas del ROVER -->
-          <li class="nav-item" ngbDropdown *ngxPermissionsOnly="['ROVER']">
-            <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdownArm" role="button">
-              ARM
-            </a>
-            <div ngbDropdownMenu aria-labelledby="navbarDropdownArm" class="dropdown-menu">
-              <a ngbDropdownItem href="#" routerLink="/brazo/piloto">Pilot</a>
-              <a ngbDropdownItem href="#" routerLink="/brazo/copiloto">Copilot</a>
-            </div>
-          </li>
-          <li class="nav-item" ngbDropdown *ngxPermissionsOnly="['ROVER']">
-            <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown1" role="button">
-              TRACTION
-            </a>
-            <div ngbDropdownMenu aria-labelledby="navbarDropdown1" class="dropdown-menu">
-              <a ngbDropdownItem href="#" routerLink="/pilot">Pilotooo</a>
-              <a ngbDropdownItem href="#" routerLink="/copilot">Copilot</a>
-            </div>
-          </li>
-          <!-- <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
+  <nav
+    class="navbar navbar-dark navbar-expand-sm navbar-fixed-top"
+    id="top-bar"
+  >
+    <div class="navbar-header">
+      <a class="navbar-brand" href="home"
+        ><img
+          style="height: 48px; padding: 2px 10px"
+          src="/static/assets/robocol-BLANCO.png"
+      /></a>
+    </div>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarCollapse"
+      aria-controls="navbarCollapse"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon">
+        <i class="fas fa-bars" style="color: #fff; font-size: 28px"></i>
+      </span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="nav navbar-nav">
+        <!-- Pestanas del ROVER -->
+        <li class="nav-item" ngbDropdown *ngxPermissionsOnly="['ROVER']">
+          <a
+            class="nav-link"
+            tabindex="0"
+            ngbDropdownToggle
+            id="navbarDropdownArm"
+            role="button"
+          >
+            ARM
+          </a>
+          <div
+            ngbDropdownMenu
+            aria-labelledby="navbarDropdownArm"
+            class="dropdown-menu"
+          >
+            <a ngbDropdownItem href="#" routerLink="/brazo/piloto">Pilot</a>
+            <a ngbDropdownItem href="#" routerLink="/brazo/copiloto">Copilot</a>
+          </div>
+        </li>
+        <li class="nav-item" ngbDropdown *ngxPermissionsOnly="['ROVER']">
+          <a
+            class="nav-link"
+            tabindex="0"
+            ngbDropdownToggle
+            id="navbarDropdown1"
+            role="button"
+          >
+            TRACTION
+          </a>
+          <div
+            ngbDropdownMenu
+            aria-labelledby="navbarDropdown1"
+            class="dropdown-menu"
+          >
+            <a ngbDropdownItem href="#" routerLink="/traccion/piloto">Piloto</a>
+            <a ngbDropdownItem href="#" routerLink="/traccion/copiloto"
+              >Copiloto</a
+            >
+          </div>
+        </li>
+        <!-- <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
             <a routerLinkActive="active" routerLink="/traccion" class="nav-link">TRACTION<span class="sr-only">(current)</span>  </a>
           </li> -->
-          <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
-            <a routerLinkActive="active" routerLink="/estado" class="nav-link">STATUS<span class="sr-only">(current)</span>  </a>
-          </li>
-          <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
-            <a routerLinkActive="active" routerLink="/estadoTopicos" class="nav-link">ROS INFO<span class="sr-only">(current)</span>  </a>
-          </li>
-          <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
-            <a routerLinkActive="active" routerLink="/sensorica" class="nav-link">SENSORS<span class="sr-only">(current)</span>  </a>
-          </li>
-          <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
-            <a routerLinkActive="active" routerLink="/fpga" class="nav-link">FPGA<span class="sr-only">(current)</span>  </a>
-          </li>
-          <!-- Pestanas del SUBMARINO -->
-          <li class="nav-item" *ngxPermissionsOnly="['SUBMARINO']">
-            <a routerLinkActive="active" routerLink="/navegacion" class="nav-link">NAVIGATION<span class="sr-only">(current)</span>  </a>
-          </li>
-          <li class="nav-item" *ngxPermissionsOnly="['SUBMARINO']">
-            <a routerLinkActive="active" routerLink="/pinza" class="nav-link">ARM<span class="sr-only">(current)</span>  </a>
-          </li>
-          <li class="nav-item" *ngxPermissionsOnly="['SUBMARINO']">
-            <a routerLinkActive="active" routerLink="/estadoSub" class="nav-link">STATUS<span class="sr-only">(current)</span>  </a>
-          </li>
-          <!-- Pestanas del LUNABOT -->
-          <li class="nav-item" *ngxPermissionsOnly="['LUNABOT']">
-            <a routerLinkActive="active" routerLink="/prueba" class="nav-link">TESTS<span class="sr-only">(current)</span>  </a>
-          </li>
-          <li class="nav-item" *ngxPermissionsOnly="['LUNABOT']">
-            <a routerLinkActive="active" routerLink="/estadoLuna" class="nav-link">STATUS<span class="sr-only">(current)</span>  </a>
-          </li>
+        <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
+          <a routerLinkActive="active" routerLink="/estado" class="nav-link"
+            >STATUS<span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
+          <a
+            routerLinkActive="active"
+            routerLink="/estadoTopicos"
+            class="nav-link"
+            >ROS INFO<span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
+          <a routerLinkActive="active" routerLink="/sensorica" class="nav-link"
+            >SENSORS<span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
+          <a routerLinkActive="active" routerLink="/fpga" class="nav-link"
+            >FPGA<span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <!-- Pestanas del SUBMARINO -->
+        <li class="nav-item" *ngxPermissionsOnly="['SUBMARINO']">
+          <a routerLinkActive="active" routerLink="/navegacion" class="nav-link"
+            >NAVIGATION<span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item" *ngxPermissionsOnly="['SUBMARINO']">
+          <a routerLinkActive="active" routerLink="/pinza" class="nav-link"
+            >ARM<span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item" *ngxPermissionsOnly="['SUBMARINO']">
+          <a routerLinkActive="active" routerLink="/estadoSub" class="nav-link"
+            >STATUS<span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <!-- Pestanas del LUNABOT -->
+        <li class="nav-item" *ngxPermissionsOnly="['LUNABOT']">
+          <a routerLinkActive="active" routerLink="/prueba" class="nav-link"
+            >TESTS<span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item" *ngxPermissionsOnly="['LUNABOT']">
+          <a routerLinkActive="active" routerLink="/estadoLuna" class="nav-link"
+            >STATUS<span class="sr-only">(current)</span>
+          </a>
+        </li>
+      </ul>
+      <!-- Elementos de la derecha barra superior. -->
+      <div class="collapse navbar-collapse flex-grow-1 text-right">
+        <ul class="navbar-nav ml-auto">
+          <span class="navbar-text">
+            <span class="badge badge-warning" *ngxPermissionsOnly="['ROVER']"
+              >ROVER</span
+            >
+            <span
+              class="badge badge-warning"
+              *ngxPermissionsOnly="['SUBMARINO']"
+              >SUBMARINES</span
+            >
+            <span class="badge badge-warning" *ngxPermissionsOnly="['LUNABOT']"
+              >LUNABOT</span
+            >
+          </span>
         </ul>
-        <!-- Elementos de la derecha barra superior. -->
-        <div class="collapse navbar-collapse flex-grow-1 text-right">
-          <ul class="navbar-nav ml-auto">
-            <span class="navbar-text">
-              <span class="badge badge-warning" *ngxPermissionsOnly="['ROVER']">ROVER</span>
-              <span class="badge badge-warning" *ngxPermissionsOnly="['SUBMARINO']">SUBMARINES</span>
-              <span class="badge badge-warning" *ngxPermissionsOnly="['LUNABOT']">LUNABOT</span>
-            </span>
-          </ul>
-        </div>
-        &nbsp;&nbsp;
-        <button type="button" class="btn btn-outline-warning" id="logIn">Log In</button>
       </div>
-    </nav>
-    <!-- <main role="main" class="container-fluid bg-dark"> -->
-    <main role="main" class="container-fluid bg-dark pt-2">
-      <router-outlet></router-outlet>
-    </main>
+      &nbsp;&nbsp;
+      <button type="button" class="btn btn-outline-warning" id="logIn">
+        Log In
+      </button>
+    </div>
+  </nav>
+  <!-- <main role="main" class="container-fluid bg-dark"> -->
+  <main role="main" class="container-fluid bg-dark pt-2">
+    <router-outlet></router-outlet>
+  </main>
   <!-- </div> -->
 </div>
